[tool.poetry]
name = "aquariumtoneo4jetl"
version = "0.1.0"
description = ""
authors = ["Justin Vrana <justin.vrana@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bcrypt = "^3.2.0"
hydra-core = "^1.0.0"
pydent = "^1.0.3"
neo4j = "^4.1.1"
cryptography = "^3.1"
dill = "^0.3.2"
tqdm = "^4.49.0"
networkx = "^2.5"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
