[tool.poetry]
name = "aqneoetl"
version = "0.1.0"
description = ""
authors = ["Justin Vrana <justin.vrana@gmail.com>"]
homepage = 'https://github.com/jvrana/AquariumToNeo4jETL'

[tool.poetry.dependencies]
python = "^3.7"
bcrypt = "^3.2.0"
hydra-core = "^1.0.0"
pydent = "^1.0.3"
neo4j = "^4.1.1"
cryptography = "^3.1"
dill = "^0.3.2"
tqdm = "^4.49.0"
networkx = "^2.5"
sphinx_rtd_theme = {version = "^0.5.0", optional = true}
sphinx = {version = "^3.2.1", optional = true}
sphinx_autodoc_typehints = {version = "^1.11.0", optional = true}

[tool.poetry.extras]
docs = ['sphinx', 'sphinx_autodoc_typehints', 'sphinx_rtd_theme']

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
